// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "fontWeight": "bold",
        "lineHeight": 15,
        "textDecorationLine": "none",
      }
    }
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`2. with a very long byline 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "fontWeight": "bold",
        "lineHeight": 15,
        "textDecorationLine": "none",
      }
    }
  >
    Camilla Long
  </Text>
  <Text
    style={
      Object {
        "color": "#696969",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
  >
    , Environment Editor | 
  </Text>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "fontWeight": "bold",
        "lineHeight": 15,
        "textDecorationLine": "none",
      }
    }
  >
    Camilla Long
  </Text>
  <Text
    style={
      Object {
        "color": "#696969",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
  >
    , Environment Editor | 
  </Text>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "#006699",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "fontWeight": "bold",
        "lineHeight": 15,
        "textDecorationLine": "none",
      }
    }
  >
    Camilla Long
  </Text>
  <Text
    style={
      Object {
        "color": "#696969",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
  >
    , Environment Editor
  </Text>
</View>
`;
